[gd_scene load_steps=4 format=3 uid="uid://cq4c6kt6wdk8o"]

[ext_resource type="Script" path="res://scenes/menu/upnp_menu.gd" id="1_no5am"]
[ext_resource type="FontFile" uid="uid://dirkq07ia4py8" path="res://ressources/font/FSEX300.ttf" id="2_hhiof"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_4nw42"]
properties/0/path = NodePath("upnpMenu/MarginContainer/ipAdress:text")
properties/0/spawn = true
properties/0/sync = true

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -22.0
offset_right = 102.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_no5am")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hhiof")
text = "UPNP"

[node name="upnpMenu" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="upnpMenu"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ipAdress" type="Label" parent="upnpMenu/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hhiof")
text = "disabled"
horizontal_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_4nw42")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
